--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase-admin": "^13.4.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
+    "mongoose-paginate-v2": "^1.9.1",
     "multer": "^2.0.2"
   }
 }
